[HOT-FIX] Update APL02 Form, Print and API
